--- a/About Us/aboutus.html
+++ b/About Us/aboutus.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>| About Us | CHARTERED ACCOUNTANCY |</title>
+  <title>About Us | CHARTERED ACCOUNTANCY |</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="logo.jpg" type="image/jpg">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap"
     rel="stylesheet">
@@ -17,9 +18,14 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css" />
-
+  <style>
+    #individual:hover{
+      background-color: black;
+      color: white;
+    }
+  </style>
 </head>
 
 <body>
@@ -28,7 +34,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top nav1" style="opacity: 0.8"
     style="background: black; color: white">
     <div class="container-fluid na">
-      <a class="navbar-brand" href="../index.html"><img src="logo.jpg" alt="logo" height="100px" width="100px"
+      <a class="navbar-brand" href="../index.html"><img src="../Services/imgs/logo.jpg" alt="logo" height="100px" width="100px"
           style="margin-right: 20px" /><b> CHARTERED ACCOUNTANCY</b></a>
       <button class="navbar-toggler head" type="button" data-bs-toggle="collapse"
         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -38,57 +44,76 @@
       <div style="margin-left: 200px" class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 lis ul1">
           <li class="nav-item" style="margin-left: 35px">
-            <a class="nav-link active a1" aria-current="page" href="../index.html">Home</a>
+            <a class="nav-link active a1" aria-current="page" href="../index.html"  style="border-bottom: none;">Home</a>
           </li>
           <li class="nav-item dropdown" style="margin-left: 35px">
-            <a style="color: white" class="nav-link dropdown-toggle a1" href="aboutus.html" id="navbarDropdown"
-              role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a style="color: white;border: none;" class="nav-link dropdown-toggle a1" href="aboutus.html" id="navbarDropdown"
+              role="button"  style="border-bottom: none;" data-bs-toggle="dropdown" aria-expanded="false">
               About Us
             </a>
-            <ul class="dropdown-menu dr" aria-labelledby="navbarDropdown" style="background-color: black">
+            <ul class="dropdown-menu dr abtus" aria-labelledby="navbarDropdown" style="background-color: black;margin-left: -70px;">
               <li>
-                <a class="dropdown-item a1" href="whoarewe.html">Who are we?</a>
+                <a class="dropdown-item" href="../About Us/aboutus.html"  style="border-bottom: none;">Who are we?</a>
               </li>
               <li>
-                <a class="dropdown-item a1" href="testimonials.html">Testimonials</a>
+                <a class="dropdown-item" href="../About Us/aboutus.html"  style="border-bottom: none;">Testimonials</a>
               </li>
             </ul>
           </li>
           <li class="nav-item dropdown" style="margin-left: 35px">
-            <a style="color: white" class="nav-link dropdown-toggle a1" href="services.html" id="navbarDropdown"
+            <a style="color: white;border: none;" class="nav-link dropdown-toggle a1" href="services.html" id="navbarDropdown"
               role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Services
             </a>
-            <ul class="dropdown-menu dr" aria-labelledby="navbarDropdown" style="background-color: black">
+            <ul class="dropdown-menu dr" aria-labelledby="navbarDropdown" style="background-color: black;margin-left: -70px;">
               <li>
-                <a class="dropdown-item" href="../Services/services.html">Our Services</a>
+                <a class="dropdown-item" href="../Services/services.html"  style="border-bottom: none;">Our Services</a>
               </li>
               <li>
-                <a class="dropdown-item" href="../Services/accounts.html">Accounts</a>
+                <a class="dropdown-item" href="../Services/accounts.html"  style="border-bottom: none;">Accounts</a>
               </li>
               <li>
-                <a class="dropdown-item" href="../Services/taxservices.html">Tax Services</a>
+                <a class="dropdown-item" href="../Services/taxservices.html"  style="border-bottom: none;">Tax Services</a>
               </li>
               <li>
-                <a class="dropdown-item" href="../Services/payroll.html">Payroll</a>
+                <a class="dropdown-item" href="../Services/payroll.html"  style="border-bottom: none;">Payroll</a>
               </li>
-              <li><a class="dropdown-item" href="../Services/vat.html">VAT</a></li>
-              <li><a class="dropdown-item" href="../Services/cis.html">CIS</a></li>
+              <li><a class="dropdown-item" href="../Services/vat.html"  style="border-bottom: none;">VAT</a></li>
+              <li><a class="dropdown-item" href="../Services/cis.html"  style="border-bottom: none;">CIS</a></li>
             </ul>
           </li>
           <li class="nav-item" style="margin-left: 35px">
-            <a class="nav-link active a1" aria-current="page" href="../News/index.html">Latest News</a>
+            <a class="nav-link active a1" aria-current="page" href="../News/index.html"  style="border-bottom: none;">Latest News</a>
           </li>
           <li class="nav-item" style="margin-left: 35px">
-            <a class="nav-link active a1" aria-current="page" href="../Contact/contacts.html">Contact Us</a>
+            <a class="nav-link active a1" aria-current="page" href="../Contact/contacts.html"  style="border-bottom: none;">Contact Us</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
     crossorigin="anonymous"></script>
+
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img id="carousel" src="../About Us/kelly-sikkema-wgcUx0kR1ps-unsplash.jpg" height="500px" class="d-block w-100" alt="titlebg.jpg">
+          <div class="carousel-caption">
+            <h1 class="ml10">
+              <span class="text-wrapper">
+                <span class="letters" style="color: black; font-weight: bolder;" >ABOUT US</span>
+              </span>
+            </h1>
+  
+            <h5 class="ml3" style="color: black;"><b>-</b>Who are we?</h5>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+          </div>
+        </div>
+      </div>
+    </div>
 
   <div class="wrapper">
 
@@ -98,7 +123,7 @@
 
         <div class="content-section">
           <div class="title">
-            <h1 data-text=ABOUT US>ABOUT US</h1>
+            <!-- <h1 data-text=ABOUT US>ABOUT US</h1> -->
           </div>
           <div class="content">
 
@@ -123,7 +148,7 @@
 
       </div>
 
-      <div class="card-row">
+      <!-- <div class="card-row">
         <div class="card">
           <a href="../Services/accounts.html">
           <img class="card-image" src="p-4.png">
@@ -168,7 +193,7 @@
                     <p class="card-title">Explore accountancy with us</p></a>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -382,7 +407,27 @@
         </div>
       </footer>
       <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg="nest"></script>
-
+      <script>
+        var textWrapper = document.querySelector('.ml3');
+        textWrapper.innerHTML = textWrapper.textContent.replace(/\S/g, "<span class='letter'>$&</span>");
+    
+        anime.timeline({ loop: true })
+          .add({
+            targets: '.ml3 .letter',
+            scale: [4, 1],
+            opacity: [0, 1],
+            translateZ: 0,
+            easing: "easeOutExpo",
+            duration: 950,
+            delay: (el, i) => 70 * i
+          }).add({
+            targets: '.ml3',
+            opacity: 0,
+            duration: 1000,
+            easing: "easeOutExpo",
+            delay: 1000
+          });
+      </script>       
       <!-- Optional JavaScript; choose one of the two! -->
 
       <!-- Option 1: Bootstrap Bundle with Popper -->
