--- a/Services/accounts.html
+++ b/Services/accounts.html
@@ -9,10 +9,11 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-  <title>| Accounts Services |</title>
+  <title>Accounts Services | CHARTERED ACCOUNTANCY |</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="imgs/logo.jpg" type="image/jpg">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-
+   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css" />
 </head>
 
@@ -32,49 +33,49 @@
       <div style="margin-left: 200px" class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 lis ul1">
           <li class="nav-item" style="margin-left: 35px">
-            <a class="nav-link active a1" aria-current="page" href="../index.html">Home</a>
+            <a class="nav-link active a1" aria-current="page" href="../index.html"  style="border-bottom: none;">Home</a>
           </li>
           <li class="nav-item dropdown" style="margin-left: 35px">
-            <a style="color: white" class="nav-link dropdown-toggle a1" href="aboutus.html" id="navbarDropdown"
+            <a style="color: white;border: none;" class="nav-link dropdown-toggle a1" href="aboutus.html" id="navbarDropdown"
               role="button" data-bs-toggle="dropdown" aria-expanded="false">
               About Us
             </a>
-            <ul class="dropdown-menu dr abtus" aria-labelledby="navbarDropdown" style="background-color: black">
+            <ul class="dropdown-menu dr abtus" aria-labelledby="navbarDropdown" style="background-color: black;margin-left: -70px;">
               <li>
-                <a class="dropdown-item a1" href="../About Us/aboutus.html">Who are we?</a>
+                <a class="dropdown-item" href="../About Us/aboutus.html"  style="border-bottom: none;">Who are we?</a>
               </li>
               <li>
-                <a class="dropdown-item a1" href="../About Us/aboutus.html">Testimonials</a>
+                <a class="dropdown-item" href="../About Us/aboutus.html"  style="border-bottom: none;">Testimonials</a>
               </li>
             </ul>
           </li>
           <li class="nav-item dropdown" style="margin-left: 35px">
-            <a style="color: white" class="nav-link dropdown-toggle a1" href="services.html" id="navbarDropdown"
+            <a style="color: white;border: none;" class="nav-link dropdown-toggle a1" href="services.html" id="navbarDropdown"
               role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Services
             </a>
-            <ul class="dropdown-menu dr" aria-labelledby="navbarDropdown" style="background-color: black">
+            <ul class="dropdown-menu dr" aria-labelledby="navbarDropdown" style="background-color: black;margin-left: -70px;">
               <li>
-                <a class="dropdown-item" href="services.html">Our Services</a>
+                <a class="dropdown-item" href="services.html"  style="border-bottom: none;">Our Services</a>
               </li>
               <li>
-                <a class="dropdown-item" href="accounts.html">Accounts</a>
+                <a class="dropdown-item" href="accounts.html"  style="border-bottom: none;">Accounts</a>
               </li>
               <li>
-                <a class="dropdown-item" href="taxservices.html">Tax Services</a>
+                <a class="dropdown-item" href="taxservices.html"  style="border-bottom: none;">Tax Services</a>
               </li>
               <li>
-                <a class="dropdown-item" href="payroll.html">Payroll</a>
+                <a class="dropdown-item" href="payroll.html"  style="border-bottom: none;">Payroll</a>
               </li>
-              <li><a class="dropdown-item" href="vat.html">VAT</a></li>
-              <li><a class="dropdown-item" href="cis.html">CIS</a></li>
+              <li><a class="dropdown-item" href="vat.html"  style="border-bottom: none;">VAT</a></li>
+              <li><a class="dropdown-item" href="cis.html"  style="border-bottom: none;">CIS</a></li>
             </ul>
           </li>
           <li class="nav-item" style="margin-left: 35px">
-            <a class="nav-link active a1" aria-current="page" href="../News/index.html">Latest News</a>
+            <a class="nav-link active a1" aria-current="page" href="../News/index.html"  style="border-bottom: none;">Latest News</a>
           </li>
           <li class="nav-item" style="margin-left: 35px">
-            <a class="nav-link active a1" aria-current="page" href="../Contact/contacts.html">Contact Us</a>
+            <a class="nav-link active a1" aria-current="page" href="../Contact/contacts.html"  style="border-bottom: none;">Contact Us</a>
           </li>
         </ul>
       </div>
@@ -147,8 +148,8 @@
       <div class="bottom">
         <h1 id="bottomheading1">View Our Other Services</h1>
 
-        <div class="album py-4 px-3 bg-light">
-          <div class="card" ">
+        <div class="album py-4 px-3 bg-light" style="align-items: center;">
+          <div class="card" >
 
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-md-4 g-3">
 
@@ -259,66 +260,66 @@
         </div>
       </div>
 
-      <div class=" text-md-left text-md-left mt-5 col foo bg-dark" style="padding-left: 40px; color: white; top: -50px;">
-        <div class="row mt-3">
-          <div class="col-md-3 col-lg-4 col-xl-3 mb-4">
-            <h6 class="text-uppercase font-weight-bold">
-              Chartered Accountancy <br /><br />
-              <br />
-            </h6>
-            <p>
-              <i class="fas fa-home mr-3"></i> Bhartiya City Nikoo Homes
-              Bangalore, 560092 Karnataka
-            </p>
-            <p><i class="fas fa-envelope mr-3"></i> contact@thefate.tech</p>
-            <p><i class="fas fa-phone mr-3"></i> +91 8095508777</p>
-            <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px" />
-          </div>
+     <div class=" text-md-left text-md-left mt-5 col foo bg-dark" style="padding-left: 40px; color: white; top: -50px;">
+      <div class="row mt-3">
+        <div class="col-md-3 col-lg-4 col-xl-3 mb-4">
+          <h6 class="text-uppercase font-weight-bold">
+            Chartered Accountancy <br /><br />
+            <br />
+          </h6>
+          <p>
+            <i class="fas fa-home mr-3"></i> Bhartiya City Nikoo Homes
+            Bangalore, 560092 Karnataka
+          </p>
+          <p><i class="fas fa-envelope mr-3"></i> contact@thefate.tech</p>
+          <p><i class="fas fa-phone mr-3"></i> +91 8095508777</p>
+          <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px" />
+        </div>
 
-          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-            <h6 class="text-uppercase font-weight-bold">Services</h6>
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+          <h6 class="text-uppercase font-weight-bold">Services</h6>
 
-            <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px" />
-            <p>
-              <a class="lin" href="accounts.html">Accounts</a>
-            </p>
-            <p>
-              <a class="lin" href="taxservices.html">Tax Services</a>
-            </p>
-            <p>
-              <a class="lin" href="vat.html">VAT</a>
-            </p>
-            <p>
-              <a class="lin" href="payroll.html">Payroll</a>
-            </p>
-            <p>
-              <a class="lin" href="cis.html">CIS</a>
-            </p>
-          </div>
-          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-            <h6 class="text-uppercase font-weight-bold">About Us</h6>
-            <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px" />
-            <p>
-              <a class="lin" href="../About Us/aboutus.html">Who Are We</a>
-            </p>
-            <p>
-              <a class="lin" href="../About Us/aboutus.html">Testimonials</a>
-            </p>
-            <p>
-              <a class="lin" href="../News/index.html">Latest News</a>
-            </p>
-            <p>
-              <a class="lin" href="privacypolicy.html">Privacy Policy</a>
-            </p>
-          </div>
+          <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px" />
+          <p>
+            <a class="lin" href="../Services/accounts.html">Accounts</a>
+          </p>
+          <p>
+            <a class="lin" href="../Services/taxservices.html">Tax Services</a>
+          </p>
+          <p>
+            <a class="lin" href="../Services/vat.html">VAT</a>
+          </p>
+          <p>
+            <a class="lin" href="../Services/payroll.html">Payroll</a>
+          </p>
+          <p>
+            <a class="lin" href="../Services/cis.html">CIS</a>
+          </p>
+        </div>
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+          <h6 class="text-uppercase font-weight-bold">About Us</h6>
+          <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px" />
+          <p>
+            <a class="lin" href="../About Us/aboutus.html">Who Are We</a>
+          </p>
+          <p>
+            <a class="lin" href="../About Us/aboutus.html">Testimonials</a>
+          </p>
+          <p>
+            <a class="lin" href="../News/index.html">Latest News</a>
+          </p>
+          <p>
+            <a class="lin" href="privacypolicy.html">Privacy Policy</a>
+          </p>
         </div>
       </div>
+    </div>
 
-      <div class="footer-copyright text-center py-3 lasfoo">
-        © 2021 Copyright:
-        <a class="dark-grey-text" href="../index.html"> Chartered Accountancy</a>
-      </div>
-    </footer>
+    <div class="footer-copyright text-center py-3 lasfoo">
+      © 2021 Copyright:
+      <a class="dark-grey-text" href="../index.html"> Chartered Accountancy</a>
+    </div>
+  </footer>
 
     <!-- -------------------------------------------------------------------------------------------------------------------------------- -->
 
