--- a/Services/vat.html
+++ b/Services/vat.html
@@ -9,10 +9,11 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-  <title>| VAT Services |</title>
+  <title>VAT Services | CHARTERED ACCOUNTANCY |</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="imgs/logo.jpg" type="image/jpg">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css" />
 
 </head>
@@ -33,49 +34,49 @@
       <div style="margin-left: 200px" class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 lis ul1">
           <li class="nav-item" style="margin-left: 35px">
-            <a class="nav-link active a1" aria-current="page" href="../index.html">Home</a>
+            <a class="nav-link active a1" aria-current="page" href="../index.html" style="border-bottom: none;">Home</a>
           </li>
           <li class="nav-item dropdown" style="margin-left: 35px">
-            <a style="color: white" class="nav-link dropdown-toggle a1" href="aboutus.html" id="navbarDropdown"
+            <a style="color: white;border: none;" class="nav-link dropdown-toggle a1" href="aboutus.html" id="navbarDropdown"
               role="button" data-bs-toggle="dropdown" aria-expanded="false">
               About Us
             </a>
-            <ul class="dropdown-menu dr abtus" aria-labelledby="navbarDropdown" style="background-color: black">
+            <ul class="dropdown-menu dr abtus" aria-labelledby="navbarDropdown" style="background-color: black;margin-left: -70px;">
               <li>
-                <a class="dropdown-item a1" href="../About Us/aboutus.html">Who are we?</a>
+                <a class="dropdown-item " href="../About Us/aboutus.html" style="border-bottom: none;">Who are we?</a>
               </li>
               <li>
-                <a class="dropdown-item a1" href="../About Us/aboutus.html">Testimonials</a>
+                <a class="dropdown-item " href="../About Us/aboutus.html" style="border-bottom: none;">Testimonials</a>
               </li>
             </ul>
           </li>
           <li class="nav-item dropdown" style="margin-left: 35px">
-            <a style="color: white" class="nav-link dropdown-toggle a1" href="services.html" id="navbarDropdown"
+            <a style="color: white;border: none;" class="nav-link dropdown-toggle a1" href="services.html" id="navbarDropdown"
               role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Services
             </a>
-            <ul class="dropdown-menu dr" aria-labelledby="navbarDropdown" style="background-color: black">
+            <ul class="dropdown-menu dr" aria-labelledby="navbarDropdown" style="background-color: black;margin-left: -70px;">
               <li>
-                <a class="dropdown-item" href="services.html">Our Services</a>
+                <a class="dropdown-item" href="services.html" style="border-bottom: none;">Our Services</a>
               </li>
               <li>
-                <a class="dropdown-item" href="accounts.html">Accounts</a>
+                <a class="dropdown-item" href="accounts.html" style="border-bottom: none;">Accounts</a>
               </li>
               <li>
-                <a class="dropdown-item" href="taxservices.html">Tax Services</a>
+                <a class="dropdown-item" href="taxservices.html" style="border-bottom: none;">Tax Services</a>
               </li>
               <li>
-                <a class="dropdown-item" href="payroll.html">Payroll</a>
+                <a class="dropdown-item" href="payroll.html"style="border-bottom: none;">Payroll</a>
               </li>
-              <li><a class="dropdown-item" href="vat.html">VAT</a></li>
-              <li><a class="dropdown-item" href="cis.html">CIS</a></li>
+              <li><a class="dropdown-item" href="vat.html"style="border-bottom: none;">VAT</a></li>
+              <li><a class="dropdown-item" href="cis.html"style="border-bottom: none;">CIS</a></li>
             </ul>
           </li>
           <li class="nav-item" style="margin-left: 35px">
-            <a class="nav-link active a1" aria-current="page" href="../News/index.html">Latest News</a>
+            <a class="nav-link active a1" aria-current="page" href="../News/index.html"style="border-bottom: none;">Latest News</a>
           </li>
           <li class="nav-item" style="margin-left: 35px">
-            <a class="nav-link active a1" aria-current="page" href="../Contact/contacts.html">Contact Us</a>
+            <a class="nav-link active a1" aria-current="page" href="../Contact/contacts.html"style="border-bottom: none;">Contact Us</a>
           </li>
         </ul>
       </div>
@@ -132,7 +133,7 @@
       <div class="bottom">
         <h1 id="bottomheading1">View Our Other Services</h1>
 
-        <div class="album py-4 px-3 bg-light">
+        <div class="album py-4 px-3 bg-light" style="align-items: center;">
           <div class="card">
 
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-md-4 g-3">
